--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,14 +6,11 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
         {% endblock %}
-
-        {% block javascripts %}
-        {% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
     </body>
-    {% block javascripts %}
+    {# {% block javascripts %}
     
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -48,5 +45,5 @@
             });
         });
         </script>
-    {% endblock %}
+    {% endblock %} #}
 </html>
